--- a/provisioner/deployment/kubernetes/admin_account.yaml
+++ b/provisioner/deployment/kubernetes/admin_account.yaml
@@ -6,7 +6,7 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1alpha1
 kind: ClusterRoleBinding
 metadata:
-  name: local-storage-provisioner
+  name: local-storage-provisioner-pv-binding
   namespace: default
 subjects:
 - kind: ServiceAccount
@@ -15,4 +15,18 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: system:persistent-volume-provisioner
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1alpha1
+kind: ClusterRoleBinding
+metadata:
+  name: local-storage-provisioner-node-binding
+  namespace: default
+subjects:
+- kind: ServiceAccount
+  name: local-storage-admin
+  namespace: default
+roleRef:
+  kind: ClusterRole
+  name: system:node
   apiGroup: rbac.authorization.k8s.io
