--- a/bootstrapper/deployment/kubernetes/bootstrapper.yaml
+++ b/bootstrapper/deployment/kubernetes/bootstrapper.yaml
@@ -1,21 +1,21 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: local-volume-bootstrapper
+  name: local-volume-provisioner-bootstrap
   namespace: kube-system
   labels:
-    app: local-volume-bootstrapper
+    app: local-volume-provisioner-bootstrap
 spec:
   restartPolicy: Never
   serviceAccountName: local-storage-bootstrapper
   containers:
   - name: bootstrapper
-    image: local-volume-bootstrapper:dev
+    image: quay.io/external_storage/local-volume-provisioner-bootstrap
     env:
     - name: MY_NAMESPACE
       valueFrom:
         fieldRef:
           fieldPath: metadata.namespace
     args:
-    - --image="quay.io/external_storage/local-volume-provisioner"
+    - --image=quay.io/external_storage/local-volume-provisioner
     - --volume-config=local-volume-config
