Automatically generate mount directory if not set in configmap

--- a/bootstrapper/deployment/kubernetes/example-config.yaml
+++ b/bootstrapper/deployment/kubernetes/example-config.yaml
@@ -15,3 +15,7 @@ data:
       "hostDir": "/mnt/hdds",
       "mountDir": "/local-hdds"
     }
+  "local-other": |
+    {
+      "hostDir": "/mnt/others"
+    }
