Update local-volume README

--- a/bootstrapper/deployment/kubernetes/example-config.yaml
+++ b/bootstrapper/deployment/kubernetes/example-config.yaml
@@ -15,7 +15,7 @@ data:
       "hostDir": "/mnt/hdds",
       "mountDir": "/local-hdds"
     }
-  "local-other": |
+  "local-storage": |
     {
-      "hostDir": "/mnt/others"
+      "hostDir": "/mnt/disks"
     }
