Update based on comment

--- a/bootstrapper/deployment/kubernetes/bootstrapper.yaml
+++ b/bootstrapper/deployment/kubernetes/bootstrapper.yaml
@@ -10,12 +10,12 @@ spec:
   serviceAccountName: local-storage-bootstrapper
   containers:
   - name: bootstrapper
-    image: quay.io/external_storage/local-volume-provisioner-bootstrap
+    image: quay.io/external_storage/local-volume-provisioner-bootstrap:latest
     env:
     - name: MY_NAMESPACE
       valueFrom:
         fieldRef:
           fieldPath: metadata.namespace
     args:
-    - --image=quay.io/external_storage/local-volume-provisioner
+    - --image=quay.io/external_storage/local-volume-provisioner:1.0.0
     - --volume-config=local-volume-config
