--- a/examples/manual-pv.yaml
+++ b/examples/manual-pv.yaml
@@ -1,28 +1,25 @@
-``` yaml
 apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: example-local-pv
   annotations:
-        "volume.alpha.kubernetes.io/node-affinity": `{
-            "requiredDuringSchedulingIgnoredDuringExecution": {
-                "nodeSelectorTerms": [
-                    { "matchExpressions": [
-                        { "key": "kubernetes.io/hostname",
-                          "operator": "In",
-                          "values": ["my-node"]
-                        }   
-                    ]}  
-                 ]}  
-              }`, 
+    "volume.alpha.kubernetes.io/node-affinity": '{
+        "requiredDuringSchedulingIgnoredDuringExecution": {
+            "nodeSelectorTerms": [
+                { "matchExpressions": [
+                    { "key": "kubernetes.io/hostname",
+                      "operator": "In",
+                      "values": ["my-node"]
+                    }   
+                ]}  
+             ]}  
+          }'
 spec:
-    capacity:
-      storage: 5Gi 
-    accessModes:
-    - ReadWriteOnce
-    persistentVolumeReclaimPolicy: Delete
-    storageClassName: local-storage
-    local:
-      path: /mnt/disks/ssd1
-```
-
+  capacity:
+    storage: 5Gi 
+  accessModes:
+  - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Delete
+  storageClassName: local-storage
+  local:
+    path: /mnt/disks/ssd1
