Revert "change claim name so it works out of the box"
This reverts commit da46204f0af16504709902a5c10070739f800a46.

--- a/examples/local-reader.yaml
+++ b/examples/local-reader.yaml
@@ -24,4 +24,4 @@ spec:
       volumes:
       - name: local-vol
         persistentVolumeClaim: 
-          claimName: "example-local-claim"
+          claimName: "local-vol-local-test-0"
