--- a/provisioner/deployment/docker/Dockerfile
+++ b/provisioner/deployment/docker/Dockerfile
@@ -12,6 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM scratch
+FROM busybox
 ADD local-volume-provisioner /local-provisioner
 ENTRYPOINT ["/local-provisioner"]
