--- a/bootstrapper/deployment/kubernetes/bootstrapper.yaml
+++ b/bootstrapper/deployment/kubernetes/bootstrapper.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: Pod
+apiVersion: batch/v1 
+kind: Job
 metadata:
   name: local-volume-provisioner-bootstrap
   namespace: kube-system
