--- a/helm/provisioner/templates/provisioner.yaml
+++ b/helm/provisioner/templates/provisioner.yaml
@@ -1,3 +1,13 @@
+{{- define "configStorageClass" }}
+{{- $classPath := . }}
+{{- range $tmp, $val := $classPath }}
+   {{- range $storageClass, $classConfig := $val }}
+      {{ $storageClass }}:
+          hostDir: {{ $classConfig.hostDir }}
+          mountDir: {{ if $classConfig.mountDir }} {{$classConfig.mountDir }} {{ else }} {{ $classConfig.hostDir }} {{ end }}
+   {{- end}}
+{{- end}}
+{{- end }}
 {{- $configMapName := .Values.configmap.configMapName }}
 {{- $provisionerNamespace := .Values.common.namespace }}
 {{- $provisionerName := .Values.daemonset.name }}
@@ -6,6 +16,7 @@
 {{- $serviceAccount := .Values.daemonset.serviceAccount }}
 {{- $kubeConfigEnv := .Values.daemonset.kubeConfigEnv }}
 {{- $nodeLabels := .Values.daemonset.nodeLabels }}
+{{- $engine := .Values.engine | default "baremetal" }} 
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -23,16 +34,11 @@ data:
 # Populating entries with user provided disk discovery directories 
 # and mount directories per storage class.
 #
-{{- range $tmp, $val := .Values.configmap.storageClass }}
-   {{- range $storageClass, $classConfig := $val }}
-      {{ $storageClass }}:     
-          hostDir: {{ $classConfig.hostDir }}
-          mountDir: {{ if $classConfig.mountDir }} {{$classConfig.mountDir }} {{ else }} {{ $classConfig.hostDir }} {{ end }}
-   {{- end}}
-{{- end}}
-
+{{- if eq ( $engine | lower ) "gcepre19" }} {{ include "configStorageClass" (.Values.configmap.gcePre19.storageClass) }} {{ end }}
+{{- if eq ( $engine | lower ) "gcepost19" }} {{ include "configStorageClass" (.Values.configmap.gcePost19.storageClass) }} {{ end }}
+{{- if eq ( $engine | lower ) "gke" }} {{ include "configStorageClass" (.Values.configmap.gke.storageClass) }} {{ end }}
+{{- if eq ( $engine | lower ) "baremetal" }} {{ include "configStorageClass" (.Values.configmap.baremetal.storageClass) }} {{ end }}
 ---
-
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
