Move default example into examples directory and use default helm generated spec.

--- a/provisioner/deployment/kubernetes/example/default_example_storageclass.yaml
+++ b/provisioner/deployment/kubernetes/example/default_example_storageclass.yaml
@@ -2,6 +2,6 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: local-storage
+  name: fast-disks
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
