--- a/provisioner/deployment/kubernetes/example/default_example_provisioner_generated.yaml
+++ b/provisioner/deployment/kubernetes/example/default_example_provisioner_generated.yaml
@@ -33,7 +33,7 @@ spec:
     spec:
       serviceAccountName: local-storage-admin
       containers:
-        - image: "quay.io/external_storage/local-volume-provisioner:latest"
+        - image: "quay.io/external_storage/local-volume-provisioner:v2.1.0"
           imagePullPolicy: "Always"
           name: provisioner 
           securityContext:
