Use RBAC to limit permissions of provisioner node-binding to get nodes

--- a/provisioner/deployment/kubernetes/example/default_example_provisioner_generated.yaml
+++ b/provisioner/deployment/kubernetes/example/default_example_provisioner_generated.yaml
@@ -62,8 +62,9 @@ spec:
 
 apiVersion: v1
 kind: ServiceAccount
-metadata:  
+metadata:
   name: local-storage-admin
+  namespace: default
 
 ---
 # Source: provisioner/templates/provisioner-cluster-role-binding.yaml
@@ -83,6 +84,16 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: local-storage-provisioner-node-clusterrole
+  namespace: default
+rules:
+- apiGroups: [""]
+  resources: ["nodes"]
+  verbs: ["get"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: local-storage-provisioner-node-binding
@@ -93,6 +104,6 @@ subjects:
   namespace: default
 roleRef:
   kind: ClusterRole
-  name: system:node
+  name: local-storage-provisioner-node-clusterrole
   apiGroup: rbac.authorization.k8s.io
 
