Set slave mount propgation in local provisioner

--- a/provisioner/deployment/kubernetes/example/default_example_provisioner_generated.yaml
+++ b/provisioner/deployment/kubernetes/example/default_example_provisioner_generated.yaml
@@ -48,7 +48,8 @@ spec:
               name: provisioner-config
               readOnly: true             
             - mountPath:  /mnt/fast-disks 
-              name: fast-disks 
+              name: fast-disks
+              mountPropagation: "HostToContainer" 
       volumes:
         - name: provisioner-config
           configMap:
