--- a/helm/test/expected/gce-retain.yaml
+++ b/helm/test/expected/gce-retain.yaml
@@ -51,6 +51,8 @@ spec:
             - mountPath: /etc/provisioner/config
               name: provisioner-config
               readOnly: true
+            - mountPath: /dev
+              name: provisioner-dev
             - mountPath: /mnt/disks/by-uuid/google-local-ssds-scsi-fs
               name: local-scsi
               mountPropagation: "HostToContainer"
@@ -61,6 +63,9 @@ spec:
         - name: provisioner-config
           configMap:
             name: local-provisioner-config
+        - name: provisioner-dev
+          hostPath:
+            path: /dev
         - name: local-scsi
           hostPath:
             path: /mnt/disks/by-uuid/google-local-ssds-scsi-fs
