--- a/helm/test/expected/baremetal-without-rbac.yaml
+++ b/helm/test/expected/baremetal-without-rbac.yaml
@@ -50,6 +50,8 @@ spec:
             - mountPath: /etc/provisioner/config
               name: provisioner-config
               readOnly: true
+            - mountPath: /dev
+              name: provisioner-dev
             - mountPath: /mnt/disks
               name: local-storage
               mountPropagation: "HostToContainer"
@@ -57,6 +59,9 @@ spec:
         - name: provisioner-config
           configMap:
             name: local-provisioner-config
+        - name: provisioner-dev
+          hostPath:
+            path: /dev
         - name: local-storage
           hostPath:
             path: /mnt/disks
