--- a/helm/test/expected/baremetal.yaml
+++ b/helm/test/expected/baremetal.yaml
@@ -51,6 +51,8 @@ spec:
             - mountPath: /etc/provisioner/config
               name: provisioner-config
               readOnly: true
+            - mountPath: /dev
+              name: provisioner-dev
             - mountPath: /mnt/disks
               name: local-storage
               mountPropagation: "HostToContainer"
@@ -58,6 +60,9 @@ spec:
         - name: provisioner-config
           configMap:
             name: local-provisioner-config
+        - name: provisioner-dev
+          hostPath:
+            path: /dev
         - name: local-storage
           hostPath:
             path: /mnt/disks
