--- a/helm/test/expected/gce-pre1.9.yaml
+++ b/helm/test/expected/gce-pre1.9.yaml
@@ -49,6 +49,8 @@ spec:
             - mountPath: /etc/provisioner/config
               name: provisioner-config
               readOnly: true
+            - mountPath: /dev
+              name: provisioner-dev
             - mountPath: /mnt/disks
               name: local-scsi
               mountPropagation: "HostToContainer"
@@ -56,6 +58,9 @@ spec:
         - name: provisioner-config
           configMap:
             name: local-provisioner-config
+        - name: provisioner-dev
+          hostPath:
+            path: /dev
         - name: local-scsi
           hostPath:
             path: /mnt/disks
