Use non-zero resync period as last insurance in local volume provisioner
- Add `MinResyncPeriod` configuration, defaults: 5m0s.
- Update JobController to use default resync period.
- Test `TestLoadProvisionerConfigs ` with real cases.
- Add example for customizing resync period.
- Update test/run.sh to fail on errors.
- Initialize rand default source on startup.

--- a/helm/provisioner/templates/provisioner.yaml
+++ b/helm/provisioner/templates/provisioner.yaml
@@ -16,6 +16,9 @@ data:
 {{- if .Values.common.useJobForCleaning }}
   useJobForCleaning: "yes"
 {{- end}}
+{{- if .Values.common.minResyncPeriod }}
+  minResyncPeriod: {{ .Values.common.minResyncPeriod | quote }}
+{{- end}}
   storageClassMap: |
     {{- range $classConfig := .Values.classes }}
     {{ $classConfig.name }}:
