--- a/helm/test/expected/baremetal-cleanbyjobs.yaml
+++ b/helm/test/expected/baremetal-cleanbyjobs.yaml
@@ -5,6 +5,10 @@ kind: ConfigMap
 metadata:
   name: local-provisioner-config
   namespace: default
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.0.0
 data:
   useJobForCleaning: "yes"
   storageClassMap: |
@@ -84,6 +88,10 @@ kind: ServiceAccount
 metadata:
   name: local-storage-admin
   namespace: default
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.0.0
 
 ---
 # Source: provisioner/templates/provisioner-cluster-role-binding.yaml
@@ -93,6 +101,10 @@ kind: ClusterRoleBinding
 metadata:
   name: local-storage-provisioner-pv-binding
   namespace: default
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.0.0
 subjects:
 - kind: ServiceAccount
   name: local-storage-admin
@@ -107,6 +119,10 @@ kind: ClusterRole
 metadata:
   name: local-storage-provisioner-node-clusterrole
   namespace: default
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.0.0
 rules:
 - apiGroups: [""]
   resources: ["nodes"]
@@ -117,6 +133,10 @@ kind: ClusterRoleBinding
 metadata:
   name: local-storage-provisioner-node-binding
   namespace: default
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.0.0
 subjects:
 - kind: ServiceAccount
   name: local-storage-admin
@@ -131,6 +151,10 @@ kind: Role
 metadata:
   name: local-storage-provisioner-jobs-role
   namespace: default
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.0.0
 rules:
 - apiGroups:
     - 'batch'
@@ -144,6 +168,10 @@ kind: RoleBinding
 metadata:
   name: local-storage-provisioner-jobs-rolebinding
   namespace: default
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.0.0
 subjects:
 - kind: ServiceAccount
   name: local-storage-admin
