--- a/helm/test/expected/baremetal-without-rbac.yaml
+++ b/helm/test/expected/baremetal-without-rbac.yaml
@@ -5,6 +5,10 @@ kind: ConfigMap
 metadata:
   name: local-provisioner-config
   namespace: default
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.0.0
 data:
   storageClassMap: |
     local-storage:
