--- a/helm/test/expected/gce-retain.yaml
+++ b/helm/test/expected/gce-retain.yaml
@@ -5,6 +5,10 @@ kind: ConfigMap
 metadata:
   name: local-provisioner-config
   namespace: default
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.0.0
 data:
   useNodeNameOnly: "true"
   storageClassMap: |
@@ -98,6 +102,10 @@ kind: ServiceAccount
 metadata:
   name: local-storage-admin
   namespace: default
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.0.0
 
 ---
 # Source: provisioner/templates/provisioner-cluster-role-binding.yaml
@@ -107,6 +115,10 @@ kind: ClusterRoleBinding
 metadata:
   name: local-storage-provisioner-pv-binding
   namespace: default
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.0.0
 subjects:
 - kind: ServiceAccount
   name: local-storage-admin
@@ -121,6 +133,10 @@ kind: ClusterRole
 metadata:
   name: local-storage-provisioner-node-clusterrole
   namespace: default
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.0.0
 rules:
 - apiGroups: [""]
   resources: ["nodes"]
@@ -131,6 +147,10 @@ kind: ClusterRoleBinding
 metadata:
   name: local-storage-provisioner-node-binding
   namespace: default
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.0.0
 subjects:
 - kind: ServiceAccount
   name: local-storage-admin
