Add support for nodeSelector constraint for Helm DaemonSet template

--- a/helm/provisioner/templates/provisioner.yaml
+++ b/helm/provisioner/templates/provisioner.yaml
@@ -61,6 +61,10 @@ spec:
         app: local-volume-provisioner
     spec:
       serviceAccountName: {{.Values.daemonset.serviceAccount}}
+{{- if .Values.daemonset.nodeSelector }}
+      nodeSelector:
+{{ .Values.daemonset.nodeSelector | toYaml | trim | indent 8 }}
+{{- end }}
 {{- if .Values.daemonset.tolerations }}
       tolerations:
 {{ .Values.daemonset.tolerations | toYaml | trim | indent 8 }}
