--- a/helm/provisioner/templates/provisioner.yaml
+++ b/helm/provisioner/templates/provisioner.yaml
@@ -51,6 +51,9 @@ metadata:
   namespace: {{ .Values.common.namespace }}
   labels:
     app: local-volume-provisioner
+    heritage: {{ .Release.Service | quote }}
+    release: {{ .Release.Name | quote }}
+    chart: {{ replace "+" "_" .Chart.Version | printf "%s-%s" .Chart.Name }}
 spec:
   selector:
     matchLabels:
@@ -119,6 +122,8 @@ spec:
           hostPath:
             path: {{ $classConfig.hostDir }}
         {{- end }}
+{{- $release := .Release }}
+{{- $chart := .Chart }}
 {{- range $val := .Values.classes }}
 {{- if $val.storageClass }}
 {{- $reclaimPolicy := $val.reclaimPolicy | default "Delete" }}
@@ -127,6 +132,10 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: {{ $val.name }}
+  labels:
+    heritage: {{ $release.Service | quote }}
+    release: {{ $release.Name | quote }}
+    chart: {{ replace "+" "_" $chart.Version | printf "%s-%s" $chart.Name }}
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
 reclaimPolicy: {{ $reclaimPolicy }}
