--- a/helm/test/expected/gke.yaml
+++ b/helm/test/expected/gke.yaml
@@ -23,6 +23,9 @@ metadata:
   namespace: default
   labels:
     app: local-volume-provisioner
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.3.0
 spec:
   selector:
     matchLabels:
@@ -73,6 +76,10 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: local-scsi
+  labels:
+    heritage: "Tiller"
+    release: "RELEASE-NAME"
+    chart: provisioner-2.3.0
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
 reclaimPolicy: Delete
