--- a/helm/generated_examples/gce-pre1.9.yaml
+++ b/helm/generated_examples/gce-pre1.9.yaml
@@ -17,7 +17,7 @@ data:
        hostDir: /mnt/disks
        mountDir: /mnt/disks
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: local-volume-provisioner
@@ -150,4 +150,8 @@ roleRef:
   kind: ClusterRole
   name: local-storage-provisioner-node-clusterrole
   apiGroup: rbac.authorization.k8s.io
+
+---
+# Source: provisioner/templates/namespace.yaml
+
 
